// python.proto
// [python quickstart](https://grpc.io/docs/quickstart/python.html#run-a-grpc-application)

// python -m grpc_tools.protoc --python_out=../python/grpc --grpc_python_out=../python/grpc -I. python.proto
// protoc --proto_path=./pb/ --go_out=plugins=grpc:./grpc python.proto

syntax = "proto3";

package pb;
option go_package = "../grpc";
import "common.proto";

service TrainApi {
    rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}
    rpc TrainStep(TrainStepRequest) returns (TrainStepResponse) {}  // 异步接口，不会返回结果
}

message SayHelloRequest {
    string msg = 1;
}

message SayHelloResponse {
    string msg = 1;
}

message TrainStepRequest {
    Base Base = 1;
    State State = 2;
}

message TrainStepResponse {
    Base Base = 1;
}
